--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,17 @@
   <head>
     <title>Programe</title>
     <link rel="stylesheet" href="./src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   </head>
+    <div class="top">
+      <h1 class="page-title">The hyper progame</h1>
+      <input class="searchbar" type="search" placeholder="Find a game..." />
+    </div>
+    <h2>Welcome,</h2>
+    <p class="page-description">The Hyper Progame is the world’s premier event for computer and video games and related products. At The Hyper Progame, the video game industry’s top talent pack the Los Angeles Convention Center, connecting tens of thousands of the best, brightest, and most innovative in the interactive entertainment industry. For three exciting days, leading-edge companies, groundbreaking new technologies, and never-before-seen products will be showcased. The Hyper Progame connects you with both new and existing partners, industry executives, gamers, and social influencers providing unprecedented exposure to the entire video game industry, all under one roof. This text seems familiar.</p>
 
-  <body>
     <a href="#">Home</a>
     <a href="#pagelist">PageList</a>
     <a href="#pagelist/borderlands">PageList borderlands</a>
