link from pagelist article to pagedetail by id, animated link

--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 
   <a href="#">Home</a>
   <a href="#pagelist">PageList</a>
-  <a href="#pagelist/borderlands">PageList borderlands</a>
+  <a href="#pagedetail/borderlands">PageList borderlands</a>
 
   <section id="pageContent">Choisissez un lien</section>
 
