main page pitch linked to home function, pagedetail background img installed

--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Programe</title>
+  <meta charset='UTF-8' />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -12,12 +13,13 @@
     <h1 class="page-title">The hyper progame</h1>
     <input class="searchbar" type="search" placeholder="Find a game..." />
   </div>
-  <h2>Welcome,</h2>
-  <p class="page-description">The Hyper Progame is the world’s premier event for computer and video games and related products. At The Hyper Progame, the video game industry’s top talent pack the Los Angeles Convention Center, connecting tens of thousands of the best, brightest, and most innovative in the interactive entertainment industry. For three exciting days, leading-edge companies, groundbreaking new technologies, and never-before-seen products will be showcased. The Hyper Progame connects you with both new and existing partners, industry executives, gamers, and social influencers providing unprecedented exposure to the entire video game industry, all under one roof. This text seems familiar.</p>
+  
+  <div id="mainpage-pitch"></div>
 
+  <!-- Keep it just in case
   <a href="#">Home</a>
   <a href="#pagelist">PageList</a>
-  <a href="#pagedetail/borderlands">PageList borderlands</a>
+  <a href="#pagedetail/borderlands">PageList borderlands</a> -->
 
   <section id="pageContent">Choisissez un lien</section>
 
