improved pagedetails info and little footer

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="top">
-    <h1 class="page-title">The hyper progame</h1>
+    <h1 class="main-title">The hyper progame</h1>
     <input class="searchbar" type="search" placeholder="Find a game..." />
   </div>
   
@@ -22,6 +22,9 @@
   <a href="#pagedetail/borderlands">PageList borderlands</a> -->
 
   <section id="pageContent">Choisissez un lien</section>
+
+  <hr class='footer-bar'/>
+  <footer>ChamCham @ 2020 - Fictionnal website for exercice</footer>
 
   <script src="./dist/bundle.js"></script>
 </body>
