working main pagedetail

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
   
   <div id="mainpage-pitch"></div>
 
-  <!-- Keep it just in case
+  <!-- Examples to refer to
   <a href="#">Home</a>
   <a href="#pagelist">PageList</a>
   <a href="#pagedetail/borderlands">PageList borderlands</a> -->
